exports[`test component renders as before with top card 1`] = `
<Unknown>
  <div
    className="pile">
    <div
      className="card">
      undefined undefined
    </div>
  </div>
</Unknown>
`;

exports[`test component renders as before without top card 1`] = `
<Unknown>
  <div
    className="pile">
    <div
      className="noCards" />
  </div>
</Unknown>
`;
